fix: main color contrasts (lightouse)

--- a/styles/components/Event.module.scss
+++ b/styles/components/Event.module.scss
@@ -1,3 +1,5 @@
+@import '../vars';
+
 .main {
   display: flex;
   gap: 1em;
@@ -18,7 +20,7 @@
   }
 
   .button {
-    color: red;
+    color: $color-main;
     font-family: monospace;
     font-size: 1.2rem;
     margin: 0 0.2rem;
@@ -30,7 +32,7 @@
 }
 
 .info {
-  border-left: 2px solid red;
+  border-left: 2px solid $color-main;
   margin-left: 1.5em;
   padding: 0.4em 0.8em;
   color: rgba(black, 0.7);
