--- a/styles/components/Navbar.module.scss
+++ b/styles/components/Navbar.module.scss
@@ -1,3 +1,5 @@
+@import '../vars';
+
 .nav {
   position: sticky;
   top: 0;
@@ -28,11 +30,11 @@
   text-align: center;
 
   &:hover {
-    color: red;
+    color: $color-main;
   }
 
   &.active {
-    background-color: red;
+    background-color: $color-main;
     color: white;
     font-weight: 600;
     border-radius: 100em;
